--- a/2018/dev_notebook.ipynb
+++ b/2018/dev_notebook.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3077,7 +3077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -3095,16 +3095,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TIMING: dataset construction took 1.229 s\n",
+      "TIMING: dataset construction took 1.204 s\n",
       "Loading dataset from disk.\n",
-      "TIMING: dataset construction took 1.130 s\n",
+      "TIMING: dataset construction took 1.091 s\n",
       "Loading dataset from disk.\n"
      ]
     }
@@ -3116,7 +3116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -3125,38 +3125,159 @@
      "text": [
       "/home/leswing/miniconda3/envs/deepchem/lib/python3.5/site-packages/sklearn/utils/validation.py:578: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
       "  y = column_or_1d(y, warn=True)\n",
-      "                                                                   "
+      "Optimization Progress:  18%|█▊        | 100/550 [08:47<1:55:58, 15.46s/pipeline]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "\n",
-      "TPOT closed prematurely. Will use the current best pipeline.\n"
+      "Generation 1 - Current best internal CV score: -115.02783456520271\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r"
+      "Optimization Progress:  27%|██▋       | 150/550 [14:06<1:40:01, 15.00s/pipeline]"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "A pipeline has not yet been optimized. Please call fit() first.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-5dee94f3910c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtpot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTPOTRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerations\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpopulation_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbosity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtpot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/miniconda3/envs/deepchem/lib/python3.5/site-packages/tpot/base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, features, target, sample_weight, groups)\u001b[0m\n\u001b[1;32m    669\u001b[0m                     \u001b[0;31m# raise the exception if it's our last attempt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    670\u001b[0m                     \u001b[0;32mif\u001b[0m \u001b[0mattempt\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mattempts\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 671\u001b[0;31m                         \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    672\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    673\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/deepchem/lib/python3.5/site-packages/tpot/base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, features, target, sample_weight, groups)\u001b[0m\n\u001b[1;32m    660\u001b[0m                         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pbar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    661\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 662\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_update_top_pipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    663\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_summary_of_best_pipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    664\u001b[0m                     \u001b[0;31m# Delete the temporary cache before exiting\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/deepchem/lib/python3.5/site-packages/tpot/base.py\u001b[0m in \u001b[0;36m_update_top_pipeline\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    734\u001b[0m             \u001b[0;31m# If user passes CTRL+C in initial generation, self._pareto_front (halloffame) shoule be not updated yet.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    735\u001b[0m             \u001b[0;31m# need raise RuntimeError because no pipeline has been optimized\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 736\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A pipeline has not yet been optimized. Please call fit() first.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    737\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    738\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_summary_of_best_pipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: A pipeline has not yet been optimized. Please call fit() first."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 2 - Current best internal CV score: -115.02783456520271\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimization Progress:  36%|███▋      | 200/550 [19:25<1:34:48, 16.25s/pipeline]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 3 - Current best internal CV score: -114.84079188156218\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimization Progress:  46%|████▌     | 252/550 [30:31<1:28:43, 17.87s/pipeline]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 4 - Current best internal CV score: -114.84079188156218\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimization Progress:  55%|█████▍    | 302/550 [34:17<34:56,  8.45s/pipeline]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 5 - Current best internal CV score: -114.84079188156218\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimization Progress:  64%|██████▍   | 353/550 [42:23<1:05:02, 19.81s/pipeline]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 6 - Current best internal CV score: -114.84079188156218\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimization Progress:  73%|███████▎  | 403/550 [43:53<18:24,  7.51s/pipeline]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 7 - Current best internal CV score: -114.84079188156218\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimization Progress:  82%|████████▏ | 453/550 [51:30<20:08, 12.46s/pipeline]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 8 - Current best internal CV score: -114.8406727584057\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Optimization Progress:  91%|█████████▏| 503/550 [57:08<11:33, 14.76s/pipeline]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 9 - Current best internal CV score: -114.8406727584057\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 10 - Current best internal CV score: -114.8406727584057\n",
+      "\n",
+      "Best pipeline: ElasticNetCV(PolynomialFeatures(input_matrix, degree=2, include_bias=False, interaction_only=False), l1_ratio=0.6000000000000001, tol=0.01)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TPOTRegressor(config_dict={'sklearn.ensemble.AdaBoostRegressor': {'loss': ['linear', 'square', 'exponential'], 'max_depth': range(1, 11), 'learning_rate': [0.001, 0.01, 0.1, 0.5, 1.0], 'n_estimators': [100]}, 'sklearn.linear_model.LassoLarsCV': {'normalize': [True, False]}, 'sklearn.kernel_approximation.RBFSample....6 , 0.65, 0.7 , 0.75, 0.8 , 0.85, 0.9 , 0.95, 1.  ]), 'alpha': [0.75, 0.8, 0.85, 0.9, 0.95, 0.99]}},\n",
+       "       crossover_rate=0.1, cv=5, disable_update_check=False,\n",
+       "       early_stop=None, generations=10, max_eval_time_mins=5,\n",
+       "       max_time_mins=None, memory=None, mutation_rate=0.9, n_jobs=4,\n",
+       "       offspring_size=50, periodic_checkpoint_folder=None,\n",
+       "       population_size=50, random_state=None, scoring=None, subsample=1.0,\n",
+       "       verbosity=2, warm_start=False)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3168,10 +3289,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-118.01797716480824\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tpot.score(test.X, test.y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tpot.export('tpot_model.py')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tpot_predictions = tpot.predict(test.X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04914982058577699"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_r2(tpot_predictions, test.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Garbage results from tpot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time for first pass bracket"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Before I do that lets backtest 2017 march madness trained on 2018 data\n",
+    "bracket = [\n",
+    "    'Virginia',\n",
+    "    'Mount+St.+Mary%27s',\n",
+    "    'Wisconsin',\n",
+    "    'Virginia+Tech',\n",
+    "    'Virginia',\n",
+    "    'UNC+Wilmington',\n",
+    "    'Florida',\n",
+    "    'East+Tennessee+St.',\n",
+    "    'SMU',\n",
+    "    'USC',\n",
+    "    'Baylor',\n",
+    "    'New+Mexico+St.',\n",
+    "    'South+Carolina',\n",
+    "    'Marquette',\n",
+    "    'Duke',\n",
+    "    'Troy',\n",
+    "    \n",
+    "    'Gonzaga',\n",
+    "    'South+Dakota+St.',\n",
+    "    'Northwestern',\n",
+    "    'Vanderbilt',\n",
+    "    'Notre+Dame',\n",
+    "    'Princeton',\n",
+    "    'West+Virginia',\n",
+    "    'Bucknell',\n",
+    "    'Maryland',\n",
+    "    'Xavier',\n",
+    "    'Florida+St.',\n",
+    "    'Florida+Gulf+Coast',\n",
+    "    'Saint+Mary%27s',\n",
+    "    'VCU',\n",
+    "    'Arizona',\n",
+    "    'North+Dakota',\n",
+    "    \n",
+    "    'Kansas',\n",
+    "    'UC+Davis',\n",
+    "    'Miami+FL',\n",
+    "    'Michigan+St.',\n",
+    "    'Iowa+St.',\n",
+    "    'Nevada',\n",
+    "    'Purdue',\n",
+    "    'Vermont',\n",
+    "    'Creighton',\n",
+    "    'Rhode+Island',\n",
+    "    'Oregon',\n",
+    "    'Iona',\n",
+    "    'Michigan',\n",
+    "    'Oklahoma+St.',\n",
+    "    'Louisville',\n",
+    "    'Jacksonville+St.',\n",
+    "    \n",
+    "    'North+Carolina',\n",
+    "    'Texas+Southern',\n",
+    "    'Arkansas',\n",
+    "    'Seton+Hall',\n",
+    "    'Minnesota',\n",
+    "    'Middle+Tennessee',\n",
+    "    'Butler',\n",
+    "    'Winthrop',\n",
+    "    'Cincinnati',\n",
+    "    'Kansas+St.',\n",
+    "    'UCLA',\n",
+    "    'Kent+St.',\n",
+    "    'Dayton',\n",
+    "    'Wichita+St.',\n",
+    "    'Kentucky',\n",
+    "    'Northern+Kentucky'\n",
+    "]\n",
+    "for team in bracket:\n",
+    "    if team not in d:\n",
+    "        print(team)"
+   ]
   }
  ],
  "metadata": {
