--- a/2018/dev_notebook.ipynb
+++ b/2018/dev_notebook.ipynb
@@ -4567,6 +4567,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 ('Virginia', array([50.04451592]))\n",
+      "0 ('Tennessee', array([37.97860674]))\n",
+      "0 ('Cincinnati', array([33.18235395]))\n",
+      "0 ('Xavier', array([53.02173634]))\n",
+      "0 ('Ohio+St.', array([20.82486399]))\n",
+      "0 ('Gonzaga', array([24.81450266]))\n",
+      "0 ('Michigan', array([21.67202814]))\n",
+      "0 ('North+Carolina', array([43.74951633]))\n",
+      "0 ('Villanova', array([50.87474457]))\n",
+      "0 ('West+Virginia', array([23.10864027]))\n",
+      "0 ('Wichita+St.', array([30.03274923]))\n",
+      "0 ('Texas+Tech', array([36.57520852]))\n",
+      "0 ('Purdue', array([48.65379302]))\n",
+      "0 ('Kansas', array([41.87121015]))\n",
+      "0 ('Auburn', array([36.32022874]))\n",
+      "0 ('Michigan+St.', array([35.83092858]))\n",
+      "0 ('Duke', array([48.92186909]))\n",
+      "1 ('Duke', array([22.76559587]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# im curious at the most lopsided games\n",
+    "for i, game_round in enumerate(whois):\n",
+    "    for game in game_round:\n",
+    "        if game[1][0] > 20:\n",
+    "            print(i, game)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
