--- a/2022/Calibrate.ipynb
+++ b/2022/Calibrate.ipynb
@@ -256,14 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "id": "b541d0d2-9591-4e1f-b21e-63921842e28e",
    "metadata": {},
    "outputs": [],
    "source": [
     "from copy import deepcopy\n",
     "def get_probability_map(df):\n",
-    "    bounds = [-float('inf'), -20, -15, -10, -5, -4, -3, -2, -1, 0, 1,2,3,4,5,10, 15,20, float('inf')]\n",
+    "    bounds = [-float('inf'), -20, -15, -10, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 10, 15, 20, float('inf')]\n",
     "    probs = [0]\n",
     "    for i in range(1, len(bounds)):\n",
     "        my_df = deepcopy(df)\n",
@@ -286,17 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "id": "7829e291-9e27-4fdf-9e28-d32a0299f9b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa821ade100>]"
+       "[<matplotlib.lines.Line2D at 0x7fa819267fd0>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -337,14 +337,6 @@
     "with open('model_results/probs_and_bounds.json', 'w') as fout:\n",
     "    fout.write(json.dumps(d, indent=4, sort_keys=True))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3001bb3d-6eeb-41eb-a48e-5fefc560b664",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
