--- a/2022/Untitled.ipynb
+++ b/2022/Untitled.ipynb
@@ -933,8 +933,252 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "b15f4bbc-a476-4643-a198-40bdc7a7a5fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pickle\n",
+    "import json\n",
+    "import re\n",
+    "from ligand_ml.data import NumpyDataset\n",
+    "from ligand_ml.data import DiskDataset\n",
+    "from ligand_ml.trans.transformers import NormalizationTransformer\n",
+    "from ligand_ml.data.splitters import k_fold\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "keywords = [\n",
+    "    'RankAdjOE',\n",
+    "    'RankAdjDE',\n",
+    "    'RankAdjTempo',\n",
+    "    'RankAPL_Off',\n",
+    "    'RankAPL_Def',\n",
+    "    'RankeFG_Pct',\n",
+    "    'RankDeFG_Pct',\n",
+    "    'RankTO_Pct',\n",
+    "    'RankDTO_Pct',\n",
+    "    'RankOR_Pct',\n",
+    "    'RankDOR_Pct',\n",
+    "    'RankFT_Rate',\n",
+    "    'RankDFT_Rate',\n",
+    "    'RankFG3Pct',\n",
+    "    'RankFG3Pct.*&od=d',\n",
+    "    'RankFG2Pct',\n",
+    "    'RankFG2Pct.*&od=d',\n",
+    "    'RankFTPct',\n",
+    "    'RankFTPct.*&od=d',\n",
+    "    'RankBlockPct',\n",
+    "    'RankBlockPct.*&od=d',\n",
+    "    'RankStlRate',\n",
+    "    'RankStlRate.*&od=d',\n",
+    "    'RankF3GRate',\n",
+    "    'RankF3GRate.*&od=d',\n",
+    "    'RankARate',\n",
+    "    'RankARate.*&od=d',\n",
+    "    'RankOff_3',\n",
+    "    'RankDef_3',\n",
+    "    'RankOff_2',\n",
+    "    'RankDef_2',\n",
+    "    'RankOff_1',\n",
+    "    'RankDef_1',\n",
+    "    'RankSOSO',\n",
+    "    'RankSOSD',\n",
+    "    'ExpRank',\n",
+    "    'SizeRank',\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def get_feature_vector(html_str, fname):\n",
+    "    fv = []\n",
+    "    for keyword in keywords:\n",
+    "        try:\n",
+    "            pattern = '%s[^o]*\">(\\d+\\.\\d+)' % keyword\n",
+    "            all_vals = re.findall(pattern, html_str)\n",
+    "            print(keyword, all_vals)\n",
+    "            val = re.findall(pattern, html_str)[-1]\n",
+    "            fv.append(float(val))\n",
+    "        except Exception as e:\n",
+    "            print(fname, keyword)\n",
+    "            print(e)\n",
+    "            raise e\n",
+    "    year = re.findall(\".*y=(\\d+).*\", fname)[0]\n",
+    "    return fv + [float(year)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "60d8303e-18e8-4f24-b112-c26b303bcae3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RankAdjOE ['119.7', '121.9']\n",
+      "RankAdjDE ['88.7', '88.9']\n",
+      "RankAdjTempo ['14.1', '14.5']\n",
+      "RankAPL_Off ['14.1', '14.5']\n",
+      "RankAPL_Def ['17.4', '17.8']\n",
+      "RankeFG_Pct ['59.7', '59.4']\n",
+      "RankDeFG_Pct ['42.9', '43.2']\n",
+      "RankTO_Pct ['15.2', '15.9']\n",
+      "RankDTO_Pct ['15.8', '16.9']\n",
+      "RankOR_Pct ['25.9', '29.0']\n",
+      "RankDOR_Pct ['21.9', '23.0']\n",
+      "RankFT_Rate ['26.1', '29.8']\n",
+      "RankDFT_Rate ['21.3', '22.2']\n",
+      "RankFG3Pct ['41.0', '37.9']\n",
+      "RankFG3Pct.*&od=d ['31.9', '30.7']\n",
+      "RankFG2Pct ['58.8', '60.9']\n",
+      "RankFG2Pct.*&od=d ['40.7', '41.6']\n",
+      "RankFTPct ['76.5', '73.0']\n",
+      "RankFTPct.*&od=d ['72.7', '69.5']\n",
+      "RankBlockPct ['6.9', '6.8']\n",
+      "RankBlockPct.*&od=d ['13.4', '13.8']\n",
+      "RankStlRate ['8.1', '8.5']\n",
+      "RankStlRate.*&od=d ['9.5', '9.0']\n",
+      "RankF3GRate ['34.5', '35.5']\n",
+      "RankF3GRate.*&od=d ['31.8', '33.9']\n",
+      "RankARate ['55.4', '55.3']\n",
+      "RankARate.*&od=d ['40.6', '40.9']\n",
+      "RankOff_3 ['30.4', '28.6']\n",
+      "RankDef_3 ['29.9', '30.7']\n",
+      "RankOff_2 ['55.2', '55.9']\n",
+      "RankDef_2 ['54.8', '54.1']\n",
+      "RankOff_1 ['14.3', '15.5']\n",
+      "RankDef_1 ['15.3', '15.1']\n",
+      "RankSOSO ['100.7']\n",
+      "RankSOSD ['100.7']\n",
+      "ExpRank ['1.55']\n",
+      "SizeRank ['78.7']\n",
+      "[121.9, 88.9, 14.5, 14.5, 17.8, 59.4, 43.2, 15.9, 16.9, 29.0, 23.0, 29.8, 22.2, 37.9, 30.7, 60.9, 41.6, 73.0, 69.5, 6.8, 13.8, 8.5, 9.0, 35.5, 33.9, 55.3, 40.9, 28.6, 30.7, 55.9, 54.1, 15.5, 15.1, 100.7, 100.7, 1.55, 78.7, 2022.0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html_str = open('raw_data/Gonzaga&y=2022.html').read()\n",
+    "fv = get_feature_vector(html_str, 'Gonzaga&y=2022.html')\n",
+    "# for elem in list(zip(fv, keywords)):\n",
+    "#     print(elem)\n",
+    "print(fv)\n",
+    "len(fv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "247f8ccc-f279-447d-a7cb-34b47ddf2620",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[121.9,\n",
+       " 88.9,\n",
+       " 72.7,\n",
+       " 14.5,\n",
+       " 17.8,\n",
+       " 59.4,\n",
+       " 43.2,\n",
+       " 15.9,\n",
+       " 16.9,\n",
+       " 29.0,\n",
+       " 23.0,\n",
+       " 29.8,\n",
+       " 22.2,\n",
+       " 22.2,\n",
+       " 30.7,\n",
+       " 30.7,\n",
+       " 41.6,\n",
+       " 41.6,\n",
+       " 69.5,\n",
+       " 69.5,\n",
+       " 13.8,\n",
+       " 13.8,\n",
+       " 9.0,\n",
+       " 9.0,\n",
+       " 33.9,\n",
+       " 33.9,\n",
+       " 40.9,\n",
+       " 40.9,\n",
+       " 28.6,\n",
+       " 30.7,\n",
+       " 55.9,\n",
+       " 54.1,\n",
+       " 15.5,\n",
+       " 15.1,\n",
+       " 104.6,\n",
+       " 100.7,\n",
+       " 1.55,\n",
+       " 78.7,\n",
+       " 2022.0]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "true_values = [121.9,\n",
+    " 88.9,\n",
+    " 72.7,\n",
+    " 14.5,\n",
+    " 17.8,\n",
+    " 59.4,\n",
+    " 43.2,\n",
+    " 15.9,\n",
+    " 16.9,\n",
+    " 29.0,\n",
+    " 23.0,\n",
+    " 29.8,\n",
+    " 22.2,\n",
+    " 22.2,\n",
+    " 30.7,\n",
+    " 30.7,\n",
+    " 41.6,\n",
+    " 41.6,\n",
+    " 69.5,\n",
+    " 69.5,\n",
+    " 13.8,\n",
+    " 13.8,\n",
+    " 9.0,\n",
+    " 9.0,\n",
+    " 33.9,\n",
+    " 33.9,\n",
+    " 40.9,\n",
+    " 40.9,\n",
+    " 28.6,\n",
+    " 30.7,\n",
+    " 55.9,\n",
+    " 54.1,\n",
+    " 15.5,\n",
+    " 15.1,\n",
+    " 104.6,\n",
+    " 100.7,\n",
+    " 1.55,\n",
+    " 78.7,\n",
+    " 2022.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc62aca9-8e85-4d63-a5c9-046d9e0c7477",
    "metadata": {},
    "outputs": [],
    "source": []
