Update for findal model building

--- a/2022/Untitled.ipynb
+++ b/2022/Untitled.ipynb
@@ -1177,8 +1177,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "cc62aca9-8e85-4d63-a5c9-046d9e0c7477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "9299fb9b-cf9e-4531-a701-c7362812b98a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = json.loads(open('brackets/bracket_2022.json').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "3137982d-8c0f-40bb-bc41-9ce66b6235a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teams = json.loads(open('model_results/results_probs_2022.json').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "13670d51-99c2-48b3-90f4-3f74fd4f23e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_teams = set()\n",
+    "for k,v in teams.items():\n",
+    "    t1, t2 = k.split(':')\n",
+    "    my_teams.add(t1)\n",
+    "    my_teams.add(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "b2d802c7-3535-4c8a-af40-01767cfabba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for t in d['first_four']:\n",
+    "    if t not in my_teams:\n",
+    "        print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "d0d40dbd-3715-4069-9927-af39188a0ee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t0\n",
+      "t1\n",
+      "t2\n",
+      "t3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in d['tourney']:\n",
+    "    if t not in my_teams:\n",
+    "        print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67e8cdee-a413-4b43-8dc1-fd4ed91cfada",
    "metadata": {},
    "outputs": [],
    "source": []
